# dlu-afsm

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  poetry.toml  pyproject.toml
.github/workflows/: run-tests.yaml
docs/: conf.py  examples.rst  fsm.rst  index.rst  state.rst
src/afsm/: __init__.py  _fsm.py  _state.py
tests/test_afsm/: conftest.py  test_afsm.py
